0.8.0 (2014-MM-DD)
==================

Backwards Incompatibilities
---------------------------

Bug Handling
------------

* Protect globals.Stopping with a RWMutex.

Features
--------

* Support environment variables in config files (#1023).
* Add Dockerfiles and example Docker usage to repo

* Encoders can now return (nil, nil) to express that they've swallowed the
  input message without generating any output.

* SandboxEncoder now supports return value of -2 from the process_message call
  to specify that no output is being generated.

* Added CBUF Librato Encoder.

0.7.2 (2014-MM-DD)
==================

Bug Handling
------------

* Fail more gracefully if user doesn't specify a scheme in the server URL for
  the ElasticSearchOutput (#1069).

* Correctly compute http timeout interval for ElasticSearchOutput when using
  HTTP indexing.

* Fixed issue w/ inaccurate payload sizes in heka-flood.

0.7.1 (2014-09-02)
==================

Bug Handling
------------

* Fixed handling of TcpInput and TcpOutput keep_alive_period default value
  handling, and added docs (#1054).

* Fixed OSX lua_sandbox build error.

* Fixed load ordering of nested MultiDecoders (#1045).

0.7.0 (2014-08-27)
==================

Backwards Incompatibilities
---------------------------

* Switched to using fork of gomock, import location changed from
  `code.google.com/p/gomock` to `github.com/rafrombrc/gomock`.

* Move *GlobalConfigStruct out of pipeline package's global namespace, it is
  now stored as an attribute on PipelineConfig. Any code that used to call
  pipeline.Globals() now must instead access *PipelineConfig.Globals. The
  `WantsPipelineConfig` interface has been introduced to give plugins access
  to the active *PipelineConfig if it's needed in the ConfigStruct or Init
  methods (#951).

* Removed deprecated `pipeline.GetHekaConfigDir` API call, which has been
  replaced by `PrependBaseDir` and `PrependShareDir` for a few versions
  now.
