@@ -325,8 +325,8 @@ type ESLogstashV0Encoder struct {
 	rawBytesFields []string
 	coord          *ElasticSearchCoordinates
 	// Field names to include in ElasticSearch document for "clean" format.
-	fields          []string
-	typeNameMatchAtType bool
+	fields         []string
+	useMessageType bool
 }
 
 type ESLogstashV0EncoderConfig struct {
@@ -336,7 +336,7 @@ type ESLogstashV0EncoderConfig struct {
 	// Name of the document type of the messages. Defaults to "message".
 	TypeName string `toml:"type_name"`
 	// Should the @type field match the index _type. Defaults to false.
-	TypeNameMatchAtType bool `toml:"type_name_match_at_type"`
+	UseMessageType bool `toml:"use_message_type"`
 	// Field names to include in ElasticSearch document.
 	Fields []string
 	// When formating the Index use the Timestamp from the Message instead of
@@ -352,7 +352,7 @@ func (e *ESLogstashV0Encoder) ConfigStruct() interface{} {
 	config := &ESLogstashV0EncoderConfig{
 		Index:                "logstash-%{2006.01.02}",
 		TypeName:             "message",
-		TypeNameMatchAtType:  false,
+		UseMessageType:       false,
 		ESIndexFromTimestamp: false,
 		Id:                   "",
 	}
@@ -377,7 +377,7 @@ func (e *ESLogstashV0Encoder) Init(config interface{}) (err error) {
 	conf := config.(*ESLogstashV0EncoderConfig)
 	e.rawBytesFields = conf.RawBytesFields
 	e.fields = conf.Fields
-	e.typeNameMatchAtType = conf.TypeNameMatchAtType
+	e.useMessageType = conf.UseMessageType
 	e.coord = &ElasticSearchCoordinates{
 		Index:                conf.Index,
 		Type:                 conf.TypeName,
@@ -403,12 +403,17 @@ func (e *ESLogstashV0Encoder) Encode(pack *PipelinePack) (output []byte, err err
 			t := time.Unix(0, m.GetTimestamp()).UTC()
 			writeStringField(first, &buf, `@timestamp`, t.Format("2006-01-02T15:04:05.000Z"))
 		case "type":
-			if e.typeNameMatchAtType {
-				var interpType  string
-				interpType, err = interpolateFlag(e.coord, m, e.coord.Type)
-				writeStringField(first, &buf, `@type`, interpType)
-			} else {
+			if e.useMessageType || len(e.coord.Type) < 1 {
 				writeStringField(first, &buf, `@type`, m.GetType())
+			} else {
+				var interpType string
+				interpType, err = interpolateFlag(e.coord, m, e.coord.Type)
+				if len(interpType) > 0 && err == nil {
+					writeStringField(first, &buf, `@type`, interpType)
+				} else {
+					// fall back on writing the uninterpolated string
+					writeStringField(first, &buf, `@type`, e.coord.Type)
+				}
 			}
 		case "logger":
 			writeStringField(first, &buf, `@logger`, m.GetLogger())
