@@ -4,6 +4,10 @@
 Backwards Incompatibilities
 ---------------------------
 
+* ESLogstashv0 encoder will now set the @type field to match the ES record
+  type specified in the `type_name` setting. This is Logstash behaviour in
+  V0. You can revert back to the old method with `use_message_type = true`
+
 Bug Handling
 ------------
 
